FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/Usage_Rates_XB__c.object-meta.xml
<CustomObject>
    <description>Holds the unique combinations of product attributes that drive pricing lookup for Cross Border Payments</description>
    <label>Usage Rates - XB</label>
    <nameField>
        <label>Attribute Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Rates - XB</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>