FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/fields/CC_Country__c.field-meta.xml
<CustomField>
    <fullName>CC_Country__c</fullName>
    <label>CC Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CC_Country</valueSetName>
    </valueSet>
</CustomField>