FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/fields/Locally_Issued__c.field-meta.xml
<CustomField>
    <fullName>Locally_Issued__c</fullName>
    <formula>IF(
    ISPICKVAL(CC_Country__c, &quot;Locally Issued&quot;), 
    &quot;Yes&quot;, 
    IF(
        ISPICKVAL(CC_Country__c, &quot;Non-Locally Issued&quot;), 
        &quot;No&quot;, 
        &quot;N/A&quot;
    )
)</formula>
    <label>Locally Issued</label>
    <type>Text</type>
</CustomField>