FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FWXB1000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>