FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/fields/Usage_Type__c.field-meta.xml
<CustomField>
    <fullName>Usage_Type__c</fullName>
    <label>Usage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Usage_Type</valueSetName>
    </valueSet>
</CustomField>