FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/listViews/All_XB_Records.listView-meta.xml
<ListView>
    <fullName>All_XB_Records</fullName>
    <columns>NAME</columns>
    <columns>Product_Code__c</columns>
    <columns>Account_Country__c</columns>
    <columns>Vertical__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>CC_Country__c</columns>
    <columns>Non_Local_Currency__c</columns>
    <columns>Surcharging__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Usage_Rate__c</columns>
    <columns>Usage_Rate_Amt__c</columns>
    <filterScope>Everything</filterScope>
    <label>All XB Records</label>
</ListView>