FLY wire David/force-app/main/default/objects/Usage_Rates_XB__c/listViews/Travel_XB_Records.listView-meta.xml
<ListView>
    <fullName>Travel_XB_Records</fullName>
    <columns>NAME</columns>
    <columns>Account_Country__c</columns>
    <columns>CC_Country__c</columns>
    <columns>Non_Local_Currency__c</columns>
    <columns>Payment_Method__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Usage_Type__c</columns>
    <columns>Vertical__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Surcharging__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Vertical__c</field>
        <operation>equals</operation>
        <value>Travel</value>
    </filters>
    <filters>
        <field>Payment_Method__c</field>
        <operation>equals</operation>
        <value>N/A</value>
    </filters>
    <label>Travel XB Records</label>
</ListView>